--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,3 +1,10 @@
-// Variables
-
 @primary: #42DCA3;
+
+@background: #0F1012;
+@header-color: #f9f9f9;
+@body-color: #999999;
+@body-color-secondary: #292b2e;
+@accent-color: #64AAA4;
+
+@medium: 992px;
+@large: 1200px;
